# SIWT

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh  dfx.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
docs/: SIWT_IMPLEMENTATION.md  api-reference.md  architecture-diagram.md
examples/: README.md
src/backend/: Cargo.toml  backend.did
src/backend/src/: accounts.rs  delegation.rs  globals.rs  hash.rs  lib.rs  messages.rs  middlewares.rs  setting.rs  signatures.rs  state.rs  states.rs  timestamp.rs  types.rs  utils.rs
src/backend/src/canisters/: mod.rs
src/backend/src/canisters/ckbtc/: minter.rs
src/backend/src/payloads/: account.rs  auth.rs  middleware.rs  mod.rs  setting.rs
src/backend/src/responses/: account.rs  auth.rs  middleware.rs  mod.rs
src/backend/src/services/: accounts.rs  auth.rs  ckbtc.rs  globals.rs  middleware.rs  mod.rs
