[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["ckbtc"]
ckbtc = []

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10", features = ["all"] }
hex = "0.4.3"
hex-literal = "0.4.1"
getrandom = { version = "0.2.10", features = ["custom"] }
ic-cdk = "0.16"
ic-certified-map = "0.4.0"
ic-stable-structures = "0.6.6"
rand = "0.8.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
simple_asn1 = "0.6.2"
chrono = { version = "0.4.40", default-features = false, features = [
  "alloc",
  "serde",
] }
futures = "0.3.31"
